editors/grammar/grammar.js
    source_file: ($) => seq(repeat($._item), optional($._term)),

    // A comment opens with `-- `, with the space, or is a bare `--` ending its line, as the compiler reads it; `--glued` is not one, so a line the compiler refuses is not painted as a comment. A documentation comment opens with `--- ` or is a bare `---`.
    _item: ($) =>
      choice(
        $.let_item,
        $.mod_item,
        $.use_item,
        $.induct_item,
        $.struct_item,
        $.concept_item,
        $.satisfy_item,
        $.foreign_item,
        $.test_item,
      ),

    // An annotated top-level `let` is an item; an unannotated one is a local `let` opening the final term (`let_term`). The dynamic precedence settles the case both grammars accept — an annotated binding followed by a term — the way the compiler does, as an item.
    // One definition, or a `let f … and g …;` group; each member takes its own `pub`.
    let_item: ($) =>
      prec.dynamic(
        1,
        seq(
          optional("pub"),
          "let",
          $.let_member,
          repeat(seq(optional("pub"), "and", $.let_member)),
          ";",
        ),
      ),

    let_member: ($) => seq(field("name", $.identifier), $._signature),

    // `(params) -> type = body` or `: type = body`.
    _signature: ($) =>
      choice(
        seq(
          field("parameters", $.parameters),
          "->",
          field("type", $._term),
          "=",
          field("body", $._term),
        ),
        seq(":", field("type", $._term), "=", field("body", $._term)),
      ),

    induct_item: ($) =>
      seq(
        optional("pub"),
        "induct",
        $.induct_body,
        repeat(seq(optional("pub"), "and", $.induct_body)),
        "end",
      ),

    induct_body: ($) =>
      seq(
        field("name", $.identifier),
        optional(field("parameters", $.type_parameters)),
        ":",
        $._arity,
        repeat($.constructor),
      ),

    _arity: ($) =>
      choice(
        seq("(", commaList($.index), ")", "->", optional("pub"), $.sort),
        seq(optional("pub"), $.sort),
      ),

    constructor: ($) =>
      seq(
        "|",
        field("name", $.identifier),
        "(",
        commaList($.payload),
        ")",
        optional(seq(":", "(", commaList($._term), ")")),
      ),

    // Plain or `@`, named or the type alone.
    payload: ($) =>
      choice(
        seq(optional("@"), field("name", $.identifier), ":", field("type", $._term)),
        seq(optional("@"), field("type", $._term)),
      ),

    // One structure, or a `struct A … and B …` group whose fields name one another; each member takes its own `pub`.
    field_declaration: ($) =>
      choice(
        seq(
          field("name", $.identifier),
          field("parameters", $.function_type_parameters),
          "->",
          field("type", $._term),
        ),
        seq(field("name", $.identifier), ":", field("type", $._term)),
        field("type", $._term),
      ),

    // One concept, or a `concept A … and B …` group whose method types name one another's dictionaries.
    field_definition: ($) =>
      seq(
        field("name", $.identifier),
        optional(field("parameters", $.sugar_parameters)),
        "=",
        field("value", $._term),
      ),

    parameters: ($) => seq("(", commaList($.parameter), ")"),

    parameter: ($) =>
      choice(
        seq("use", field("type", $._term)),
        seq(optional("@"), field("pattern", $._pattern), ":", field("type", $._term)),
        seq("@", field("type", $._term)),
      ),

    function_type_parameters: ($) => seq("(", commaList($.function_type_parameter), ")"),

    function_type_parameter: ($) =>
      choice(
        seq("use", field("type", $._term)),
        seq(optional("@"), field("name", $.identifier), ":", field("type", $._term)),
        seq(optional("@"), field("type", $._term)),
      ),

    lambda_parameters: ($) => seq("(", commaList($.lambda_parameter), ")"),

    lambda_parameter: ($) =>
      seq(
        optional(choice("@", "use")),
        field("pattern", $._pattern),
        optional(seq(":", field("type", $._term))),
      ),

    // ---- Terms ----

    _term: ($) =>
      choice(
        $.let_term,
        $.function_type,
        $.lambda,
        $._infix,
      ),

    let_term: ($) => seq($.let_binding, field("body", $._term)),

    let_binding: ($) =>
      seq(
        "let",
        field("pattern", $._pattern),
        choice(
          seq(
            field("parameters", $.parameters),
            "->",
            field("type", $._term),
            "=",
            field("value", $._term),
          ),
          seq(optional(seq(":", field("type", $._term))), "=", field("value", $._term)),
        ),
        repeat(seq("and", $.let_member)),
        ";",
      ),

    match_term: ($) =>
      seq(
        "match",
        field("scrutinee", $._term),
        optional(seq(":", field("motive", $._term))),
        repeat($.match_arm),
        "end",
      ),

    match_arm: ($) =>
      seq("|", field("pattern", $._match_pattern), "=>", field("body", $._term)),

    choose_term: ($) => seq("choose", repeat($.choose_arm), "end"),

    // A bind arm's pattern is read as a term: every refutable pattern shape is also a term shape, and a highlighter has no need to tell them apart.
    choose_arm: ($) =>
      seq(
        "|",
        field("test", $._term),
        optional(seq("=", field("value", $._term))),
        "=>",
        field("body", $._term),
      ),

    function_type: ($) =>
      seq(field("parameters", $.function_type_parameters), "->", field("result", $._term)),

    lambda: ($) => seq(field("parameters", $.lambda_parameters), "=>", field("body", $._term)),

    _infix: ($) => choice($.binary, $._applied),

    binary: ($) => {
      const table = [
        [PRECEDENCE.or, "||"],
        [PRECEDENCE.and, "&&"],
        [PRECEDENCE.compare, choice("==", "!=", "<", ">", "<=", ">=")],
        [PRECEDENCE.add, choice("+", "-")],
        [PRECEDENCE.multiply, choice("*", "/", "%")],
      ];

      return choice(
        ...table.map(([precedence, operator]) =>
          prec.left(
            precedence,
            seq(field("left", $._infix), field("operator", operator), field("right", $._infix)),
          ),
        ),
      );
    },

    _applied: ($) => choice($._atom, $.call, $.projection, $.bang),

    call: ($) =>
      prec.left(PRECEDENCE.suffix, seq(field("function", $._applied), field("arguments", $.arguments))),

    arguments: ($) => seq("(", commaList($.argument), ")"),

    argument: ($) => seq(optional(choice("@", "use")), $._term),

    projection: ($) =>
      prec.left(
        PRECEDENCE.suffix,
        seq(
          field("value", $._applied),
          token.immediate("."),
          field("field", alias(token.immediate(choice(/[0-9]+/, IDENTIFIER)), $.field_identifier)),
        ),
      ),

    goal: (_) => "?",

    sort: (_) => choice("Type", "Prop"),

    boolean: (_) => choice("true", "false"),

    // A path is whitespace-free: the segments after the first are immediate tokens.
    path: ($) =>
      seq(
        choice(seq("/", alias(token.immediate(IDENTIFIER), $.identifier)), $.identifier),
        repeat(seq(token.immediate("/"), alias(token.immediate(IDENTIFIER), $.identifier))),
      ),

    // A term-position path whose head is the lexed `test` keyword, shown as the path it spells. Keyword extraction lexes `test` over `identifier` wherever an item may start, so a term spelled `test` there — `let x: Nat = 1; test(1)` — would strand the keyword in an ERROR node without this alternative. Term position only: binder and pattern paths never compete with an item start, and the compiler's parser backtracks out of the same overlap by itself.
    tuple_type: ($) => seq("{", commaList($.field_declaration), "}"),

    unit: (_) => seq("(", ")"),

    // A first field followed by a comma, or a single labeled field, is what makes a tuple rather than a parenthesized term.
    tuple: ($) =>
      seq(
        "(",
        choice(
          seq($.tuple_field, ",", commaList($.tuple_field)),
          $.field_definition,
        ),
        ")",
      ),

    tuple_field: ($) => choice($.field_definition, $._term),

    parenthesized: ($) => seq("(", $._term, ")"),

    // ---- Literals ----

    // The sign is glued to the digits: `-42` is one literal, `- 42` a subtraction. The float values no decimal spells take a required sign: `+inf.0`, `-inf.0`, `+nan.0`, `-nan.0`.
    number: (_) =>
      token(
        choice(
          /[+-](inf|nan)\.0/,
          /[+-]?[0-9]+\.[0-9]+([eE][+-]?[0-9]+)?/,
          /[+-]?0x[0-9a-fA-F]+/,
          /[+-]?0b[01]+/,
          /[+-]?[0-9]+/,
        ),
      ),

    _pattern: ($) =>
      choice($.identifier, $.tuple_pattern, $.struct_pattern, $.parenthesized_pattern),

    tuple_pattern: ($) =>
      seq(
        "(",
        choice(
          seq($.pattern_field, ",", commaList($.pattern_field)),
          seq(field("name", $.identifier), "=", $._pattern),
        ),
        ")",
      ),

    pattern_field: ($) =>
      choice(seq(field("name", $.identifier), "=", $._pattern), $._pattern),

    struct_pattern: ($) =>
      seq(field("type", $.path), "{", commaList($.pattern_field), "}"),

    _match_pattern: ($) =>
      choice(
        $.constructor_pattern,
        $.boolean,
        $.character,
        $.successor_pattern,
        $.number,
        $.list_pattern,
        $.packed_pattern,
        $.tuple_match_pattern,
        $.struct_match_pattern,
        $.parenthesized_match_pattern,
        $.identifier,
      ),

    constructor_pattern: ($) =>
      seq(field("name", $.identifier), "(", commaList($.constructor_argument), ")"),

    constructor_argument: ($) => seq(optional("@"), $._match_pattern),

    // `pred + 1`, with an optional `; hypothesis` receiving the fold result.
    successor_pattern: ($) =>
      seq(field("predecessor", $.identifier), "+", $.number, optional($.hypothesis)),

    hypothesis: ($) => seq(";", $._pattern),

    list_pattern: ($) =>
      choice(
        seq("[", "]"),
        seq(
          "[",
          field("head", $.identifier),
          ",",
          "..",
          field("tail", $.identifier),
          "]",
          optional($.hypothesis),
        ),
      ),

    packed_pattern: ($) =>
      choice(
        seq(field("grain", choice("b[", "x[")), "]"),
        seq(
          field("grain", choice("b[", "x[")),
          field("head", $.identifier),
          ",",
          "..",
          field("tail", $.identifier),
          "]",
          optional($.hypothesis),
        ),
      ),

    tuple_match_pattern: ($) =>
      seq(
        "(",
        choice(
          seq($.match_pattern_field, ",", commaList($.match_pattern_field)),
          seq(field("name", $.identifier), "=", $._match_pattern),
        ),
        ")",
      ),

    match_pattern_field: ($) =>
      choice(seq(field("name", $.identifier), "=", $._match_pattern), $._match_pattern),

    struct_match_pattern: ($) =>
      seq(field("type", $.path), "{", commaList($.match_pattern_field), "}"),

    identifier: (_) => IDENTIFIER,
  },
});
